--- a/FoodManager.FoodClassification/FoodManager.FoodClassification.csproj
+++ b/FoodManager.FoodClassification/FoodManager.FoodClassification.csproj
@@ -30,6 +30,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,14 +65,17 @@
     <Compile Include="Realizations\XmlFoodClassificationLoader.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FoodManager.Data\FoodManager.Data.csproj">
-      <Project>{5001C56E-A642-4879-95CE-D31761BBAF92}</Project>
-      <Name>FoodManager.Data</Name>
+    <ProjectReference Include="..\FoodManager.DataModels\FoodManager.DataModels.csproj">
+      <Project>{7DF9AB5E-5714-4929-B449-EDC82136E44A}</Project>
+      <Name>FoodManager.DataModels</Name>
     </ProjectReference>
     <ProjectReference Include="..\FoodManager.ServiceModels\FoodManager.ServiceModels.csproj">
       <Project>{0BEF92F5-CE77-4EBF-A592-52D7B2A743AE}</Project>
       <Name>FoodManager.ServiceModels</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
